@@ -23,8 +23,8 @@
      permission="zope2.View"
      layer=".interfaces.IThemeSpecific"
      />
-     
-  <!-- we have to override portal_tabs_view here because if we need actions 
+
+  <!-- we have to override portal_tabs_view here because if we need actions
   displayed in the global navigation they have to be last instead of first -->
   <browser:page
       zcml:condition="not-have opengever"
@@ -42,7 +42,7 @@
       template="testicons.pt"
       permission="zope2.Public"
       />
-      
+
     <browser:page
         for="Products.Archetypes.interfaces.IBaseObject"
         name="folder_overview"
@@ -90,7 +90,7 @@
       name="plone.searchbox"
       manager="plone.app.layout.viewlets.interfaces.IPortalHeader"
       class=".viewlets.SearchBoxViewlet"
-      permission="zope2.View" 
+      permission="zope2.View"
       layer=".interfaces.IThemeSpecific"
       />
 
@@ -121,7 +121,7 @@
       permission="zope2.View"
       layer=".interfaces.IThemeSpecific"
       />
-      
+
   <browser:viewlet
       name="plone.abovecontenttitle.documentactions"
       manager="plone.app.layout.viewlets.interfaces.IAboveContentTitle"
@@ -181,7 +181,7 @@
       class=".viewlets.ContentMenuViewlet"
       permission="zope2.View"
       layer="izug.basetheme.browser.interfaces.IIzugSpecific"
-      />  
+      />
 
 
   <!-- izug/zug.ch special folder_contents -->
@@ -198,7 +198,7 @@
        class=".foldercontents.FolderContentsKSSView"
        attribute="update_table"
        name="foldercontents_update_table"
-       layer="izug.basetheme.browser.interfaces.IIzugSpecific"       
+       layer="izug.basetheme.browser.interfaces.IIzugSpecific"
        permission="cmf.ListFolderContents" />
 
    <browser:page
@@ -214,7 +214,7 @@
         class=".foldercontents.FolderContentsKSSView"
         attribute="update_table"
         name="foldercontents_update_table"
-        layer="izug.basetheme.browser.interfaces.IZugSpecific"       
+        layer="izug.basetheme.browser.interfaces.IZugSpecific"
         permission="cmf.ListFolderContents" />
 
 
@@ -236,6 +236,14 @@
       template="viewlets_templates/contentviews.pt"
       permission="zope2.View"
       layer=".interfaces.IThemeSpecific"
+      />
+
+  <browser:viewlet
+      name="izug.basetheme-colorization"
+      manager="plone.app.layout.viewlets.interfaces.IHtmlHead"
+      template="viewlets_templates/colorization.pt"
+      class=".colorization.ColorizationViewlet"
+      permission="zope2.View"
       />
 
 </configure>
